master_yaml/test-apl/ingress.yml
apiVersion: networking.k8s.io/v1beta
kind: Ingress
metadata:
  name: hello-world-ingress
  annotations:
    kubernetes.io/ingress.class: 'nginx'

spec:
  defaultBackend:
    service:
      name: nginx
      port:
        number: 80
  rules:
  - host: abc.sample.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-world-svc
            port:
              number: 8080
